--- a/integration/Dockerfile.template
+++ b/integration/Dockerfile.template
@@ -1,4 +1,9 @@
 FROM ubuntu:18.04
+ENV INITSYSTEM on
+
+COPY ./deps/deps.sh /deps.sh
+RUN chmod +x /deps.sh && /deps.sh
+RUN rm /deps.sh
 
 RUN mkdir \
   /deps
