--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2.1'
 services:
   integration:
     build:
-      context: '.'
+      context: './integration'
       dockerfile: './integration/Dockerfile.template'
     privileged: 'true'
     restart: 'always'
