--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
   integration:
     build:
       context: './integration'
-      dockerfile: './integration/Dockerfile.template'
+      dockerfile: './Dockerfile.template'
     privileged: 'true'
     restart: 'always'
