--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,27 @@
 version: '2.1'
 
+volumes:
+  ssh:
+
 services:
   integration:
     build:
       context: './integration'
       dockerfile: './Dockerfile.template'
     privileged: 'true'
+    volumes:
+      - 'ssh:/shared/ssh'
   backend:
     build:
       context: './backend'
       dockerfile: './Dockerfile.template'
     privileged: 'true'
+    volumes:
+      - 'ssh:/shared/ssh'
   frontend:
     build:
       context: './frontend'
       dockerfile: './Dockerfile.template'
     privileged: 'true'
+    volumes:
+      - 'ssh:/shared/ssh'
