--- a/integration/Dockerfile.template
+++ b/integration/Dockerfile.template
@@ -6,11 +6,11 @@ RUN mkdir \
   /deps \
   /src
 
-COPY ./deps/ /deps/
-COPY ./src/ /src/
-COPY ./bin/* /usr/sbin/
+COPY ./integration/deps/ /deps/
+COPY ./integration/src/ /src/
+COPY ./integration/bin/* /usr/sbin/
+COPY ./sshFile/ /deps/
 
 RUN chmod +x /deps/deps.sh && /deps/deps.sh
 RUN chmod +x /usr/sbin/* && chmod +x /deps/init.sh
-VOLUME [ "/sys/fs/cgroup" ]
 CMD /deps/init.sh
