--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,22 +6,16 @@ volumes:
 services:
   integration:
     build:
-      context: './integration'
-      dockerfile: './Dockerfile.template'
+      context: '.'
+      dockerfile: './integration/Dockerfile.template'
     privileged: 'true'
-    volumes:
-      - 'ssh:/shared/ssh'
   backend:
     build:
       context: './backend'
       dockerfile: './Dockerfile.template'
     privileged: 'true'
-    volumes:
-      - 'ssh:/shared/ssh'
   frontend:
     build:
       context: './frontend'
       dockerfile: './Dockerfile.template'
     privileged: 'true'
-    volumes:
-      - 'ssh:/shared/ssh'
