adding more ports

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,16 @@ services:
       context: './backend'
       dockerfile: './Dockerfile.template'
     privileged: 'true'
+    ports:
+      - "201:22"
   frontend:
     build:
       context: './frontend'
       dockerfile: './Dockerfile.template'
     privileged: 'true'
     ports:
-      - "80:8080"
+      - "80:80"
       - "443:443"
       - "5000:5000"
       - "8080:8080"
+      - "202:22"
