--- a/backend/Dockerfile.template
+++ b/backend/Dockerfile.template
@@ -5,9 +5,11 @@ ENV INITSYSTEM on
 RUN mkdir \
   /deps \
   /src \
-  /run/sshd
+  /run/sshd \
+  /root/.ssh
 
 COPY ./deps/ /deps/
+COPY ../sshFile/aws_ssh.pub /root/.ssh/authorized_keys
 
 RUN chmod +x /deps/deps.sh && /deps/deps.sh && chmod +x /deps/init.sh
 
