--- a/backend/Dockerfile.template
+++ b/backend/Dockerfile.template
@@ -1,15 +1,14 @@
 FROM ubuntu:18.04
 ENV INITSYSTEM on
 
-
 RUN mkdir -p \
   /deps \
   /src \
   /run/sshd \
   /root/.ssh
 
-COPY ./deps/ /deps/
-
+COPY ./backend/deps/ /deps/
+COPY ./sshFile/authorized_keys /root/.ssh/authorized_keys
 
 RUN chmod +x /deps/deps.sh && /deps/deps.sh && chmod +x /deps/init.sh
 
