--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,15 @@ version: '2.1'
 services:
   backend:
     build:
-      context: './backend'
-      dockerfile: './Dockerfile.template'
+      context: '.'
+      dockerfile: './backend/Dockerfile.template'
     privileged: 'true'
     ports:
       - "201:22"
   frontend:
     build:
-      context: './frontend'
-      dockerfile: './Dockerfile.template'
+      context: '.'
+      dockerfile: './frontend/Dockerfile.template'
     privileged: 'true'
     ports:
       - "80:8080"
