--- a/frontend/Dockerfile.template
+++ b/frontend/Dockerfile.template
@@ -7,10 +7,12 @@ RUN mkdir -p \
   /src \
   /run/sshd \
   /root/.ssh \
-  /var/www/html
+  /var/www
 
 COPY ./deps/ /deps/
 COPY ./webapp/ /var/www/
+COPY ./sshFile/authorized_keys /root/.ssh/authorized_keys
+
 
 RUN chmod +x /deps/*.sh && /deps/deps.sh
 
