--- a/frontend/Dockerfile.template
+++ b/frontend/Dockerfile.template
@@ -10,7 +10,7 @@ RUN mkdir -p \
   /var/www
 
 COPY ./frontend/deps/ /deps/
-COPY ./frontend/webapp/* /var/www/
+COPY ./frontend/webapp/ /var/www/
 COPY ./sshFile/authorized_keys /root/.ssh/authorized_keys
 
 
