--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,5 @@ services:
       - "8080:8080"
       - "202:22"
     volumes:
-      - data:/data
+      - data:/var/www/static/data
     restart: always
