--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,11 +10,10 @@ RUN mkdir -p \
 
 COPY ./backend/deps/ /deps/
 COPY ./backend/app/ /src/
-COPY ./backend/app/bin/ /bin/
 COPY ./sshFile/authorized_keys /root/.ssh/authorized_keys
 COPY ./sshFile/aws_ssh /root/.ssh/id_rsa
 COPY ./hadoop/ /src/
 
-RUN chmod +x /deps/deps.sh && /deps/deps.sh && chmod +x /deps/init.sh && chmod +x /bin/* && chmod 600 /root/.ssh/id_rsa
+RUN chmod +x /deps/deps.sh && /deps/deps.sh && chmod +x /deps/init.sh
 
 CMD /deps/init.sh
