--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,6 +15,6 @@ COPY ./frontend/webapp/ /var/www/
 COPY ./sshFile/authorized_keys /root/.ssh/authorized_keys
 
 
-RUN chmod +x /deps/*.sh && /deps/deps.sh
+RUN chmod +x /deps/*.sh
 
 CMD /deps/init.sh
